overflow fix

--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@ body {
 @media screen and (max-width: 420px) {
   body {
     width: 100vw;
+    overflow-x: hidden;
   }
 }
 
